# supply-chain-agents

./: .env.example  .gitignore  Dockerfile  README.md  app.py  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
data/: sample_data.csv
src/: config.py  guardrails.py  models.py
src/agents/: __init__.py  demand_analyst.py  inventory_monitor.py  supplier_analyst.py
src/graph/: __init__.py  state.py  workflow.py
src/observability/: callbacks.py
src/tools/: __init__.py  data_loader.py  forecasting.py  report_generator.py  search.py
