[project]
name = "supply-chain-agents"
version = "0.1.0"
description = "Multi-agent supply chain intelligence system built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "pandas>=2.2",
    "pydantic>=2.0",
    "streamlit>=1.40",
    "duckduckgo-search>=7.0",
    "python-dotenv>=1.0",
]

[project.scripts]
scia = "app:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
